feat(test): add compile tests for namespaced records and interfaces

--- a/src/pydjinni/generator/cpp/it/CMakeLists.txt
+++ b/src/pydjinni/generator/cpp/it/CMakeLists.txt
@@ -87,3 +87,8 @@ cpp_test_case(ErrorTest
     INCLUDES
         include
 )
+
+cpp_test_case(NamespaceTest
+    SOURCES
+        tests/test_namespace.cpp
+)
