--- a/src/pydjinni/generator/objc/it/CMakeLists.txt
+++ b/src/pydjinni/generator/objc/it/CMakeLists.txt
@@ -61,3 +61,4 @@ add_subdirectory(interface)
 add_subdirectory(function)
 add_subdirectory(async)
 add_subdirectory(error)
+add_subdirectory(namespace)
