feat(cpp): add support for not_null (gsl)

--- a/src/pydjinni/generator/cpp/it/CMakeLists.txt
+++ b/src/pydjinni/generator/cpp/it/CMakeLists.txt
@@ -92,3 +92,9 @@ cpp_test_case(NamespaceTest
     SOURCES
         tests/test_namespace.cpp
 )
+
+cpp_test_case(NotNullTest
+    SOURCES
+        tests/test_not_null.cpp
+)
+
