--- a/src/pydjinni/generator/it/CMakeLists.txt
+++ b/src/pydjinni/generator/it/CMakeLists.txt
@@ -20,3 +20,4 @@ add_subdirectory(function)
 add_subdirectory(async)
 add_subdirectory(error)
 add_subdirectory(namespace)
+add_subdirectory(not_null)
