--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,10 +46,10 @@ Include(FetchContent)
 if(BUILD_TESTING)
     Include(IntegrationTesting)
     enable_testing()
-    FetchContent_Declare(
-        Catch2
+    FetchContent_Declare(Catch2
         GIT_REPOSITORY https://github.com/catchorg/Catch2.git
         GIT_TAG        v3.5.0
+        GIT_SHALLOW ON
     )
     FetchContent_MakeAvailable(Catch2)
     include(Catch)
