feat(optional): add optional interface tests for objc, cppcli

--- a/src/pydjinni/generator/cppcli/it/interface/CMakeLists.txt
+++ b/src/pydjinni/generator/cppcli/it/interface/CMakeLists.txt
@@ -17,4 +17,5 @@ cppcli_test_case(InterfaceTest
         generate.cppcli.namespace=Test::Interface::CppCli
     SOURCES
         tests/InterfaceTest.cs
+        tests/OptionalInterfaceTest.cs
 )
