--- a/src/pydjinni/generator/objc/it/swift/interface/CMakeLists.txt
+++ b/src/pydjinni/generator/objc/it/swift/interface/CMakeLists.txt
@@ -18,4 +18,5 @@ swift_test_case(InterfaceTest
         generate.objcpp.namespace=test::interface_test::objcpp
     SOURCES
         tests/InterfaceTests.swift
+        tests/OptionalInterfaceTests.swift
 )
