feat: add testing for external types
- fix language server for file imports
- added tests for cpp, java, objc to verify the import of external types

--- a/src/pydjinni/generator/it/CMakeLists.txt
+++ b/src/pydjinni/generator/it/CMakeLists.txt
@@ -21,3 +21,4 @@ add_subdirectory(async)
 add_subdirectory(error)
 add_subdirectory(namespace)
 add_subdirectory(not_null)
+add_subdirectory(external_types)
