--- a/src/pydjinni/generator/java/it/java/CMakeLists.txt
+++ b/src/pydjinni/generator/java/it/java/CMakeLists.txt
@@ -75,3 +75,4 @@ add_subdirectory(function)
 add_subdirectory(async)
 add_subdirectory(error)
 add_subdirectory(namespace)
+add_subdirectory(external_types)
