--- a/src/pydjinni/generator/objc/it/objc/CMakeLists.txt
+++ b/src/pydjinni/generator/objc/it/objc/CMakeLists.txt
@@ -63,3 +63,4 @@ add_subdirectory(function)
 add_subdirectory(async)
 add_subdirectory(error)
 add_subdirectory(namespace)
+add_subdirectory(external_types)
