feat: add testing for external interface type

--- a/src/pydjinni/generator/it/external_types/CMakeLists.txt
+++ b/src/pydjinni/generator/it/external_types/CMakeLists.txt
@@ -53,6 +53,7 @@ define_test_case(ExternalTypesTest
         generate.cpp.namespace=test::external_types
     SOURCES
         src/main_interface.cpp
+        src/export/interface_type.cpp
     INCLUDE_DIRS
         generated/export/include/cpp
 )
