--- a/src/pydjinni/generator/java/it/java/record/CMakeLists.txt
+++ b/src/pydjinni/generator/java/it/java/record/CMakeLists.txt
@@ -20,6 +20,7 @@ java_test_case(RecordTest
         generate.jni.namespace=test::record::jni
     SOURCES
         src/BaseRecord.java
+    TEST_SOURCES
         tests/TestPrimitiveTypes.java
         tests/TestCollectionTypes.java
         tests/TestOptionalTypes.java
