--- a/src/pydjinni/generator/cpp/it/interface/CMakeLists.txt
+++ b/src/pydjinni/generator/cpp/it/interface/CMakeLists.txt
@@ -1,4 +1,4 @@
-# Copyright 2024 - 2025 jothepro
+# Copyright 2025 jothepro
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -12,17 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-cmake_minimum_required(VERSION 3.24)
-
-project(PyDjinniJava_SupportLib C CXX)
-
-add_library(jni_support_lib
-        include/pydjinni/jni/marshal.hpp
-        include/pydjinni/jni/support.hpp
-        src/pydjinni/support.cpp
+cpp_test_case(InterfaceTest
+    SOURCES
+        tests/test_interface.cpp
 )
-
-target_include_directories(jni_support_lib PUBLIC include)
-target_link_libraries(jni_support_lib PUBLIC support_lib::common JNI::JNI)
-set_target_properties(jni_support_lib PROPERTIES FOLDER "support_lib")
-add_library(support_lib::jni ALIAS jni_support_lib)
