--- a/src/pydjinni/generator/java/it/java/CMakeLists.txt
+++ b/src/pydjinni/generator/java/it/java/CMakeLists.txt
@@ -1,4 +1,4 @@
-# Copyright 2023 jothepro
+# Copyright 2023 - 2025 jothepro
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -57,6 +57,7 @@ function(java_test_case TEST_CASE_NAME)
         FILES ${java_GENERATED_SOURCES} ${TEST_CASE_SOURCES}
     )
     set_target_properties(${JAVA_TARGET_NAME} PROPERTIES FOLDER "it/${TEST_CASE_NAME}")
+    set_target_properties(${JAVA_TARGET_NAME}_javadoc PROPERTIES FOLDER "it/${TEST_CASE_NAME}")
     add_dependencies(${JAVA_TARGET_NAME} ${JNI_TARGET_NAME} ${JAVA_TARGET_NAME}_javadoc)
     get_target_property(TEST_JAR_FILE ${JAVA_TARGET_NAME} JAR_FILE)
     add_test(NAME Java.${TEST_CASE_NAME} COMMAND ${Java_JAVA_EXECUTABLE}
