--- a/src/pydjinni/generator/objc/objcpp/support_lib/CMakeLists.txt
+++ b/src/pydjinni/generator/objc/objcpp/support_lib/CMakeLists.txt
@@ -1,4 +1,4 @@
-# Copyright 2024 jothepro
+# Copyright 2024 - 2025 jothepro
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -25,9 +25,7 @@ add_library(objc_support_lib
 )
 
 target_compile_options(objc_support_lib PUBLIC "-fobjc-arc")
-
 target_include_directories(objc_support_lib PUBLIC include)
-
 target_link_libraries(objc_support_lib PUBLIC support_lib::cpp)
-
+set_target_properties(objc_support_lib PROPERTIES FOLDER "support_lib")
 add_library(support_lib::objc ALIAS objc_support_lib)
