--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       matrix:
         os: [ ubuntu-24.04, windows-2022, macos-15 ]
-        python-version: [ "3.10", "3.11", "3.12", "3.13" ]
+        python-version: [ "3.13" ]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v4
