--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,14 +8,11 @@ authors = [{ name = "jothepro", email = "pydjinni@jothe.pro" }]
 dynamic = ["version"]
 description = "An opinionated Djinni reimplementation written in Python."
 readme = "README.md"
-requires-python = ">=3.10"
+requires-python = ">=3.13"
 classifiers = [
     "Intended Audience :: Developers",
     "License :: OSI Approved :: Apache Software License",
     "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.10",
-    "Programming Language :: Python :: 3.11",
-    "Programming Language :: Python :: 3.12",
     "Programming Language :: Python :: 3.13",
 ]
 keywords = ["djinni"]
@@ -23,13 +20,11 @@ dependencies = [
     "importlib-metadata>=8.5,<9",
     "click>=8.1,<9",
     "Jinja2>=3.1,<4",
-    "pydantic>=2.7.0,<3",
-    "pydantic-settings>=2.1.0,<3",
+    "pydantic>=2.11.0,<3",
+    "pydantic-settings>=2.9.0,<3",
     'rich>=13.9,<14',
     'PyYAML>=6,<7',
     'dotmap>=1.3,<2',
-    'tomli>=1.1.0,<2; python_version < "3.11"',
-    'StrEnum>=0.4; python_version < "3.11"',
     'tomli_w>=1.0,<2',
     'setuptools>=75',
     'antlr4-python3-runtime==4.13.2',
@@ -58,6 +53,10 @@ doc = [
     "mkdocstrings[python]==0.27.0",
     "setuptools_scm==8.1.0",
 ]
+
+[tool.pytest.ini_options]
+asyncio_mode = "auto"
+asyncio_default_fixture_loop_scope="function"
 
 [project.urls]
 Repository = "https://github.com/pydjinni/pydjinni"
