fix: report generated files as absolute paths
- updating project template
- generated files and include dirs are reported as absolute paths
  to avoid confusion about the file location

--- a/src/pydjinni_init/templates/conan_cmake/template/lib/CMakeLists.txt
+++ b/src/pydjinni_init/templates/conan_cmake/template/lib/CMakeLists.txt
@@ -15,8 +15,8 @@ project({{ target }} LANGUAGES ${PROJECT_LANGUAGES})
 
 find_package(Microsoft.GSL REQUIRED)
 
-pydjinni_generate(interface.pydjinni
-    CONFIG ${CMAKE_SOURCE_DIR}/pydjinni.yaml
+pydjinni_generate(${CMAKE_CURRENT_SOURCE_DIR}/interface.pydjinni
+    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
     LANGUAGES cpp java objc cppcli
     CLEAN
 )
