--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -69,13 +69,29 @@ jobs:
     name: package test
     strategy:
       matrix:
-        os: [ ubuntu-24.04, windows-2022, macos-15 ]
+        include:
+          - os: ubuntu-24.04
+            package: aar
+            target: android
+          - os: windows-2022
+            package: nuget
+            target: windows
+          - os: windows-2022
+            package: aar
+            target: android
+          - os: macos-15
+            package: aar
+            target: android
+          - os: macos-15
+            package: swiftpackage
+            target: ios ios_simulator macos
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
       - uses: actions/setup-java@v4
+        if: matrix.target == 'android'
         with:
           distribution: 'corretto'
           java-version: '17'
@@ -93,16 +109,14 @@ jobs:
         working-directory: test-library
       - name: Set up Conan
         run: conan profile detect
-      - name: package library for android
-        run: pydjinni package aar android
+      - name: package library
+        run: pydjinni package ${{ matrix.package }} ${{ matrix.target }}
         working-directory: test-library
-      - name: package library for darwin
-        if: ${{ startsWith(matrix.os, 'macos') }}
-        run: pydjinni package swiftpackage ios macos
-        working-directory: test-library
-      - name: package library for windows
-        if: ${{ startsWith(matrix.os, 'windows') }}
-        run: pydjinni package nuget windows
+      - name: publish library to local repository
+        env:
+          pydjinni__package__swiftpackage__publish__repository: ${{ github.workspace }}/test-publishing
+          pydjinni__package__nuget__publish__source: ${{ github.workspace }}\test-publishing
+        run: pydjinni publish ${{ matrix.package }}
         working-directory: test-library
   cmake_test:
     name: CMake test
