feat(ci): optimize gradle execution

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -95,6 +95,9 @@ jobs:
         with:
           distribution: 'corretto'
           java-version: '17'
+      - name: Setup Gradle
+        if: matrix.target == 'android'
+        uses: gradle/actions/setup-gradle@v4
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
